@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-10-13T01:21:55Z",
-  "count_outdated" : 1980,
-  "uniques_outdated" : 1218,
-  "count" : 1998,
-  "uniques" : 1236,
+  "timestamp" : "2025-10-14T01:16:50Z",
+  "count_outdated" : 1985,
+  "uniques_outdated" : 1223,
+  "count" : 1999,
+  "uniques" : 1237,
   "clones" : [
-    {
-      "timestamp": "2025-09-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 3, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 3, 4 ]
-    },
-    {
-      "timestamp": "2025-09-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-10-01T00:00:00Z",
       "count": 1,
@@ -112,6 +94,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-10-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
