@@ -1,17 +1,7 @@
 {
-  "count": 15,
-  "uniques": 7,
+  "count": 14,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2025-09-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-09-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-10-01T00:00:00Z",
       "count": 1,
@@ -61,6 +51,11 @@
       "timestamp": "2025-10-12T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-10-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
