@@ -1,3 +1,12 @@
+2025-10-14T01:16:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18482484026 # 796
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-14
+* notice: last 14d: unq all: 6 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 1218 1980 / 1236 1998
+* notice: next accum: outdated-unq outdated-all / unq all: 1223 1985 / 1237 1999
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-29 2025-09-30] / [2025-10-13]
+
 2025-10-13T01:21:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18452461885 # 795
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-13
